force-app/main/default/objects/clofor_com_cfs__ACBalBS__c/fields/clofor_com_cfs__ACBalanceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACBalanceID__c</fullName>
    <label>A/C BALANCE ID</label>
    <referenceTo>clofor_com_cfs__ACBalance__c</referenceTo>
    <relationshipLabel>A/C BAL+B/S</relationshipLabel>
    <relationshipName>ACBalanceID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>