force-app/main/default/objects/clofor_com_cfs__ACBalBS__c/fields/clofor_com_cfs__BalanceTypeBS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BalanceTypeBS__c</fullName>
    <label>BALANCE TYPE-B/S</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__BalanceType</valueSetName>
    </valueSet>
</CustomField>