force-app/main/default/objects/clofor_com_cfs__ACBalBS__c/fields/clofor_com_cfs__BalanceTypeFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BalanceTypeFormu__c</fullName>
    <formula>text(clofor_com_cfs__ACBalanceID__r.clofor_com_cfs__BalanceType__c)</formula>
    <label>BALANCE TYPE-FORMU</label>
    <type>Text</type>
</CustomField>