force-app/main/default/objects/clofor_com_cfs__ACBalBS__c/fields/clofor_com_cfs__BSID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BSID__c</fullName>
    <label>B/S ID</label>
    <referenceTo>clofor_com_cfs__BalanceSheet__c</referenceTo>
    <relationshipLabel>A/C BAL+B/S</relationshipLabel>
    <relationshipName>ACBalBS</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>