force-app/main/default/objects/clofor_com_cfs__ACBalBS__c/fields/clofor_com_cfs__CloseBalBS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CloseBalBS__c</fullName>
    <label>CLOSING BALANCE-B/S</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>