force-app/main/default/objects/clofor_com_cfs__ACBalBS__c/fields/clofor_com_cfs__CloseBalCreditFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CloseBalCreditFormu__c</fullName>
    <formula>clofor_com_cfs__ACBalanceID__r.clofor_com_cfs__ClosingBalanceLocalCredit__c</formula>
    <label>CLOSING BALANCE-CREDIT-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>